--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,17 @@
 @media only screen and (max-width: 590px) {
 
-  .text-center{
+  .text-center {
     font-size: large;
   }
 }
 
-img{
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+}
+
+.card {
+  height: 100px;
 }
