--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
   }
 }
 
-img {
+.about-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -13,5 +13,19 @@ img {
 }
 
 .card {
-  height: 100px;
+  color:#fff;
+  height: 235px;
+  background-size:cover; 
+  background-position:center; 
+}
+
+.card-with-bg {
+  transition: all 0.3s ease;
+  background-color: rgba(0, 0, 0, 0);
+  z-index: 1;
+}
+
+.card-with-bg:hover{
+  font-size: 19px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
