--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 590px) {
 
   .text-center {
-    font-size: large;
+    font-size: small;
   }
 }
 
@@ -12,7 +12,7 @@
   width: 75%;
 }
 
-.card {
+.card-with-bg {
   color:#fff;
   height: 235px;
   background-size:cover; 
@@ -22,10 +22,15 @@
 .card-with-bg {
   transition: all 0.3s ease;
   background-color: rgba(0, 0, 0, 0);
-  z-index: 1;
 }
 
-.card-with-bg:hover{
+.card-with-bg:hover > *:not(.card-body){
   font-size: 19px;
   background-color: rgba(0, 0, 0, 0.5);
+  height: 220px;
+  color:#fff;
+}
+
+.clickable-card {
+  color: #fff;
 }
